--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^29.5.1",
+    "@types/lodash": "^4.14.194",
     "ts-jest": "^29.1.0"
   }
 }
